Finish welcome page

--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -3,7 +3,7 @@ page-welcome {
     position: relative;
     background: url('../assets/img/splashbg.png') no-repeat transparent;
     background-size: cover;
-    height: 45%;
+    height: 20%;
     z-index: 1;
     background-repeat: repeat-x;
     animation: animatedBackground 40s linear infinite;
@@ -22,10 +22,13 @@ page-welcome {
   }
   .splash-logo {
     margin: auto;
-    background: url('../assets/img/appicon.png') repeat transparent;
+    background: url('../assets/img/appicon.png') no-repeat white;
     background-size: 100%;
+    background-position: center;
     width: 128px;
     height: 128px;
+    border-radius: 50%;
+    object-fit: cover;
   }
   .splash-intro {
     font-size: 18px;
